--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
 }
 
 dependencies {
+	// https://mvnrepository.com/artifact/net.datafaker/datafaker
+	implementation 'net.datafaker:datafaker:2.5.3'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	compileOnly 'org.projectlombok:lombok'
