--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/youbank
+    url: jdbc:mysql://localhost:3306/youbank
     username: root
-    password: mysql502
+    password: 1234
 
   jpa:
     database: mysql
