--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/youbank
-    username: root
-    password: mysql502
+    url: jdbc:mysql://192.168.0.144:3307/db_odd_adv_2
+    username: odd_adv_2
+    password: index502
 
   jpa:
     database: mysql
